[2022-44] Changed the notebook names to standard with suffix '_normalization'

--- a/src/revised_case_normalization/Hirslanden_St_Anna_2018_normalization.ipynb
+++ b/src/revised_case_normalization/Hirslanden_St_Anna_2018_normalization.ipynb
@@ -79,8 +79,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 11:12:54.655 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 51 cases for Hirslanden St. Anna 2018\n",
-      "2022-11-10 11:12:54.659 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:59 - TYPES:\n",
+      "2022-11-14 09:44:47.573 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 51 cases for Hirslanden St. Anna 2018\n",
+      "2022-11-14 09:44:47.578 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:63 - TYPES:\n",
       "tranche                   string\n",
       "datum                     string\n",
       "case_id                   object\n",
@@ -110,14 +110,14 @@
       "kassenbeanstandung        string\n",
       "case_id_norm              object\n",
       "dtype: object\n",
-      "2022-11-10 11:12:54.666 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
-      "2022-11-10 11:12:54.670 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
-      "2022-11-10 11:12:54.673 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
-      "2022-11-10 11:12:54.677 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
-      "2022-11-10 11:12:54.678 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
-      "2022-11-10 11:12:54.684 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 1 rows were affected:\n",
+      "2022-11-14 09:44:47.584 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
+      "2022-11-14 09:44:47.587 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
+      "2022-11-14 09:44:47.590 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
+      "2022-11-14 09:44:47.595 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
+      "2022-11-14 09:44:47.595 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
+      "2022-11-14 09:44:47.602 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 1 rows were affected:\n",
       "row 20: primary diagnosis T813 => M8668\n",
-      "2022-11-10 11:12:54.686 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:106 - Completed validation\n"
+      "2022-11-14 09:44:47.604 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:110 - Completed validation\n"
      ]
     },
     {
@@ -1166,7 +1166,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 11:13:02.186 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:90 - Read 12990 rows from the DB, for the hospital 'Hirslanden St. Anna' in 2018\n"
+      "2022-11-14 09:44:48.735 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:90 - Read 12990 rows from the DB, for the hospital 'Hirslanden St. Anna' in 2018\n"
      ]
     },
     {
@@ -2331,8 +2331,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 11:13:02.840 | INFO     | src.revised_case_normalization.notebook_functions.group:group:83 - Grouping 51 cases ...\n",
-      "2022-11-10 11:13:03.861 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:88 - Grouped 51 cases into: 51 revisions, 455 diagnoses rows, 265 procedure rows\n"
+      "2022-11-14 09:44:49.104 | INFO     | src.revised_case_normalization.notebook_functions.group:group:83 - Grouping 51 cases ...\n",
+      "2022-11-14 09:44:50.119 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:88 - Grouped 51 cases into: 51 revisions, 455 diagnoses rows, 265 procedure rows\n"
      ]
     }
    ],
@@ -2924,12 +2924,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 11:13:03.879 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:249 - Trying to insert 51 cases into the 'Revisions' table ...\n",
-      "2022-11-10 11:13:04.914 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:286 - Inserted 51 cases into the 'Revisions' table\n",
-      "2022-11-10 11:13:04.918 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:298 - Trying to insert 455 rows into the 'Diagnoses' table ...\n",
-      "2022-11-10 11:13:06.858 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:336 - Inserted 455 rows into the 'Diagnoses' table\n",
-      "2022-11-10 11:13:06.861 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:347 - Trying to insert 265 rows into the 'Procedures' table ...\n",
-      "2022-11-10 11:13:07.823 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:393 - Inserted 265 rows into the 'Procedures' table\n"
+      "2022-11-14 09:44:50.140 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:249 - Trying to insert 51 cases into the 'Revisions' table ...\n",
+      "2022-11-14 09:44:51.238 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:275 - Deleted 51 rows from the \"Revisions\" table, which is about to be updated\n",
+      "2022-11-14 09:44:51.334 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:286 - Inserted 51 cases into the 'Revisions' table\n",
+      "2022-11-14 09:44:51.336 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:298 - Trying to insert 455 rows into the 'Diagnoses' table ...\n",
+      "2022-11-14 09:44:52.761 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:336 - Inserted 455 rows into the 'Diagnoses' table\n",
+      "2022-11-14 09:44:52.768 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:347 - Trying to insert 265 rows into the 'Procedures' table ...\n",
+      "2022-11-14 09:44:54.034 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:393 - Inserted 265 rows into the 'Procedures' table\n"
      ]
     }
    ],
