--- a/src/revised_case_normalization/Hirslanden_Zürich_2017_normalization.ipynb
+++ b/src/revised_case_normalization/Hirslanden_Zürich_2017_normalization.ipynb
@@ -81,8 +81,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 13:47:11.623 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 128 cases for Hirslanden Zurich 2017\n",
-      "2022-11-10 13:47:11.628 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:60 - TYPES:\n",
+      "2022-11-14 09:45:37.572 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 128 cases for Hirslanden Zurich 2017\n",
+      "2022-11-14 09:45:37.577 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:63 - TYPES:\n",
       "datum                                                string\n",
       "tranche                                              string\n",
       "case_id                                              object\n",
@@ -113,16 +113,16 @@
       "ablehnung kasse                                      string\n",
       "case_id_norm                                         object\n",
       "dtype: object\n",
-      "2022-11-10 13:47:11.639 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
-      "2022-11-10 13:47:11.645 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
-      "2022-11-10 13:47:11.653 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
-      "2022-11-10 13:47:11.699 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
-      "2022-11-10 13:47:11.700 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
-      "2022-11-10 13:47:11.714 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 2 rows were affected:\n",
+      "2022-11-14 09:45:37.587 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
+      "2022-11-14 09:45:37.593 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
+      "2022-11-14 09:45:37.599 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
+      "2022-11-14 09:45:37.606 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
+      "2022-11-14 09:45:37.607 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
+      "2022-11-14 09:45:37.652 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 2 rows were affected:\n",
       "row 106: primary diagnosis J181 => J4400\n",
       "row 126: primary diagnosis J4481 => J4480\n",
-      "2022-11-10 13:47:11.717 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:104 - Removed 2 rows containing duplicates\n",
-      "2022-11-10 13:47:11.718 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:106 - Completed validation\n"
+      "2022-11-14 09:45:37.654 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:108 - Removed 2 rows containing duplicates\n",
+      "2022-11-14 09:45:37.654 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:110 - Completed validation\n"
      ]
     },
     {
@@ -414,7 +414,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 13:47:13.202 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:90 - Read 19047 rows from the DB, for the hospital 'Hirslanden Zurich' in 2017\n"
+      "2022-11-14 09:45:39.033 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:90 - Read 19047 rows from the DB, for the hospital 'Hirslanden Zurich' in 2017\n"
      ]
     },
     {
@@ -581,7 +581,7 @@
     "cols_to_join.remove(CASE_ID_COL)\n",
     "cols_to_join.append(NORM_CASE_ID_COL)\n",
     "# Ignore the patient ID in this dataset, because it is encrypted\n",
-    "cols_to_join.remove(PATIENT_ID_COL)\n",
+    "# cols_to_join.remove(PATIENT_ID_COL)\n",
     "\n",
     "revised_cases, unmatched = revise(file_info, revised_cases_df, validation_cols=cols_to_join)\n",
     "revised_cases.head()"
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "52f9099e-37d1-4c35-8d40-11054aa23cb3",
    "metadata": {},
    "outputs": [
@@ -613,8 +613,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 13:47:13.629 | INFO     | src.revised_case_normalization.notebook_functions.group:group:83 - Grouping 126 cases ...\n",
-      "2022-11-10 13:47:14.850 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:88 - Grouped 126 cases into: 126 revisions, 1224 diagnoses rows, 634 procedure rows\n"
+      "2022-11-14 09:45:39.684 | INFO     | src.revised_case_normalization.notebook_functions.group:group:83 - Grouping 126 cases ...\n",
+      "2022-11-14 09:45:40.773 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:88 - Grouped 126 cases into: 126 revisions, 1224 diagnoses rows, 634 procedure rows\n"
      ]
     }
    ],
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "31c61507-2134-4d8b-b497-752e6a55e273",
    "metadata": {},
    "outputs": [
@@ -780,7 +780,7 @@
        "[634 rows x 6 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "492c0392",
    "metadata": {
     "collapsed": false,
@@ -951,7 +951,7 @@
        "[126 rows x 6 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "04e44c03",
    "metadata": {
     "collapsed": false,
@@ -975,13 +975,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 13:47:14.887 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:249 - Trying to insert 126 cases into the 'Revisions' table ...\n",
-      "2022-11-10 13:47:15.688 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:275 - Deleted 126 rows from the \"Revisions\" table, which is about to be updated\n",
-      "2022-11-10 13:47:15.897 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:286 - Inserted 126 cases into the 'Revisions' table\n",
-      "2022-11-10 13:47:15.898 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:298 - Trying to insert 1224 rows into the 'Diagnoses' table ...\n",
-      "2022-11-10 13:47:18.269 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:336 - Inserted 1224 rows into the 'Diagnoses' table\n",
-      "2022-11-10 13:47:18.272 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:347 - Trying to insert 634 rows into the 'Procedures' table ...\n",
-      "2022-11-10 13:47:19.316 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:393 - Inserted 634 rows into the 'Procedures' table\n"
+      "2022-11-14 09:45:40.799 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:249 - Trying to insert 126 cases into the 'Revisions' table ...\n",
+      "2022-11-14 09:45:42.004 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:275 - Deleted 126 rows from the \"Revisions\" table, which is about to be updated\n",
+      "2022-11-14 09:45:42.269 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:286 - Inserted 126 cases into the 'Revisions' table\n",
+      "2022-11-14 09:45:42.274 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:298 - Trying to insert 1224 rows into the 'Diagnoses' table ...\n",
+      "2022-11-14 09:45:45.334 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:336 - Inserted 1224 rows into the 'Diagnoses' table\n",
+      "2022-11-14 09:45:45.335 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:347 - Trying to insert 634 rows into the 'Procedures' table ...\n",
+      "2022-11-14 09:45:46.265 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:393 - Inserted 634 rows into the 'Procedures' table\n"
      ]
     }
    ],
