--- a/src/revised_case_normalization/KSSG_SRRWS_2019_normalization.ipynb
+++ b/src/revised_case_normalization/KSSG_SRRWS_2019_normalization.ipynb
@@ -84,8 +84,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 11:44:23.838 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 48 cases for KSSG SRRWS 2019\n",
-      "2022-11-10 11:44:23.842 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:59 - TYPES:\n",
+      "2022-11-14 09:50:53.151 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 48 cases for KSSG SRRWS 2019\n",
+      "2022-11-14 09:50:53.156 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:63 - TYPES:\n",
       "tranche                   string\n",
       "case_id                   object\n",
       "patient_id                object\n",
@@ -116,14 +116,14 @@
       "kassenablehnung           string\n",
       "case_id_norm              object\n",
       "dtype: object\n",
-      "2022-11-10 11:44:23.849 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
-      "2022-11-10 11:44:23.853 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
-      "2022-11-10 11:44:23.856 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
-      "2022-11-10 11:44:23.859 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
-      "2022-11-10 11:44:23.860 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
-      "2022-11-10 11:44:23.867 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 1 rows were affected:\n",
+      "2022-11-14 09:50:53.163 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
+      "2022-11-14 09:50:53.167 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
+      "2022-11-14 09:50:53.170 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
+      "2022-11-14 09:50:53.173 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
+      "2022-11-14 09:50:53.174 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
+      "2022-11-14 09:50:53.180 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 1 rows were affected:\n",
       "row 22: primary diagnosis D7014 => K521\n",
-      "2022-11-10 11:44:23.869 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:106 - Completed validation\n"
+      "2022-11-14 09:50:53.183 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:110 - Completed validation\n"
      ]
     },
     {
@@ -1115,8 +1115,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 11:44:26.669 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:90 - Read 15005 rows from the DB, for the hospital 'KSSG SRRWS' in 2019\n",
-      "2022-11-10 11:44:26.679 | WARNING  | src.revised_case_normalization.notebook_functions.revise:revise:47 - 1 rows could not be matched, given ['age_years', 'case_id_norm', 'duration_of_stay', 'gender']\n"
+      "2022-11-14 09:50:56.061 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:90 - Read 15005 rows from the DB, for the hospital 'KSSG SRRWS' in 2019\n",
+      "2022-11-14 09:50:56.073 | WARNING  | src.revised_case_normalization.notebook_functions.revise:revise:47 - 1 rows could not be matched, given ['age_years', 'case_id_norm', 'duration_of_stay', 'gender']\n"
      ]
     },
     {
@@ -1299,7 +1299,99 @@
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>case_id</th>\n",
+       "      <th>patient_id</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age_years</th>\n",
+       "      <th>duration_of_stay</th>\n",
+       "      <th>case_id_norm</th>\n",
+       "      <th>old_pd</th>\n",
+       "      <th>primary_diagnosis</th>\n",
+       "      <th>bfs_code</th>\n",
+       "      <th>pccl</th>\n",
+       "      <th>drg</th>\n",
+       "      <th>added_icds</th>\n",
+       "      <th>removed_icds</th>\n",
+       "      <th>added_chops</th>\n",
+       "      <th>removed_chops</th>\n",
+       "      <th>aimedic_id</th>\n",
+       "      <th>case_id_db</th>\n",
+       "      <th>patient_id_db</th>\n",
+       "      <th>age_days</th>\n",
+       "      <th>admission_weight</th>\n",
+       "      <th>gestation_age</th>\n",
+       "      <th>admission_date</th>\n",
+       "      <th>grouper_admission_type</th>\n",
+       "      <th>discharge_date</th>\n",
+       "      <th>grouper_discharge_type</th>\n",
+       "      <th>ventilation_hours</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>2070265027</td>\n",
+       "      <td>2884A07656CD9535</td>\n",
+       "      <td>M</td>\n",
+       "      <td>44</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2070265027</td>\n",
+       "      <td>S321</td>\n",
+       "      <td>S321</td>\n",
+       "      <td>M200</td>\n",
+       "      <td>3</td>\n",
+       "      <td>I68B</td>\n",
+       "      <td>[S334, B181]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[846]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       case_id        patient_id gender  age_years  duration_of_stay case_id_norm old_pd primary_diagnosis bfs_code  pccl   drg    added_icds removed_icds added_chops removed_chops  aimedic_id case_id_db patient_id_db  age_days  admission_weight  gestation_age admission_date grouper_admission_type discharge_date grouper_discharge_type  ventilation_hours\n",
+       "28  2070265027  2884A07656CD9535      M         44                13   2070265027   S321              S321     M200     3  I68B  [S334, B181]           []       [846]            []         NaN        NaN           NaN       NaN               NaN            NaN            NaN                    NaN            NaN                    NaN                NaN"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "if unmatched.shape[0] > 0:\n",
     "    display(unmatched)"
@@ -1315,8 +1407,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 11:44:27.083 | INFO     | src.revised_case_normalization.notebook_functions.group:group:83 - Grouping 47 cases ...\n",
-      "2022-11-10 11:44:28.039 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:88 - Grouped 47 cases into: 47 revisions, 486 diagnoses rows, 126 procedure rows\n"
+      "2022-11-14 09:50:56.487 | INFO     | src.revised_case_normalization.notebook_functions.group:group:83 - Grouping 47 cases ...\n",
+      "2022-11-14 09:50:57.447 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:88 - Grouped 47 cases into: 47 revisions, 486 diagnoses rows, 126 procedure rows\n"
      ]
     }
    ],
@@ -1868,13 +1960,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 11:44:28.057 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:249 - Trying to insert 47 cases into the 'Revisions' table ...\n",
-      "2022-11-10 11:44:29.052 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:275 - Deleted 47 rows from the \"Revisions\" table, which is about to be updated\n",
-      "2022-11-10 11:44:29.137 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:286 - Inserted 47 cases into the 'Revisions' table\n",
-      "2022-11-10 11:44:29.138 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:298 - Trying to insert 486 rows into the 'Diagnoses' table ...\n",
-      "2022-11-10 11:44:30.753 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:336 - Inserted 486 rows into the 'Diagnoses' table\n",
-      "2022-11-10 11:44:30.758 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:347 - Trying to insert 126 rows into the 'Procedures' table ...\n",
-      "2022-11-10 11:44:31.523 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:393 - Inserted 126 rows into the 'Procedures' table\n"
+      "2022-11-14 09:50:57.466 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:249 - Trying to insert 47 cases into the 'Revisions' table ...\n",
+      "2022-11-14 09:50:58.457 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:275 - Deleted 47 rows from the \"Revisions\" table, which is about to be updated\n",
+      "2022-11-14 09:50:58.557 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:286 - Inserted 47 cases into the 'Revisions' table\n",
+      "2022-11-14 09:50:58.560 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:298 - Trying to insert 486 rows into the 'Diagnoses' table ...\n",
+      "2022-11-14 09:51:07.146 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:336 - Inserted 486 rows into the 'Diagnoses' table\n",
+      "2022-11-14 09:51:07.147 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:347 - Trying to insert 126 rows into the 'Procedures' table ...\n",
+      "2022-11-14 09:51:07.711 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:393 - Inserted 126 rows into the 'Procedures' table\n"
      ]
     }
    ],
