--- a/src/revised_case_normalization/Winterthur_2017_normalization.ipynb
+++ b/src/revised_case_normalization/Winterthur_2017_normalization.ipynb
@@ -84,8 +84,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 10:39:18.561 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 218 cases for KSW 2017\n",
-      "2022-11-10 10:39:18.565 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:59 - TYPES:\n",
+      "2022-11-14 09:56:19.228 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 218 cases for KSW 2017\n",
+      "2022-11-14 09:56:19.232 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:63 - TYPES:\n",
       "tranche                   string\n",
       "datum                     string\n",
       "fid                       string\n",
@@ -116,12 +116,12 @@
       "kasse                     string\n",
       "case_id_norm              object\n",
       "dtype: object\n",
-      "2022-11-10 10:39:18.610 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
-      "2022-11-10 10:39:18.619 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
-      "2022-11-10 10:39:18.628 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
-      "2022-11-10 10:39:18.636 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
-      "2022-11-10 10:39:18.637 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
-      "2022-11-10 10:39:18.654 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 10 rows were affected:\n",
+      "2022-11-14 09:56:19.278 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
+      "2022-11-14 09:56:19.287 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
+      "2022-11-14 09:56:19.297 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
+      "2022-11-14 09:56:19.306 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
+      "2022-11-14 09:56:19.306 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
+      "2022-11-14 09:56:19.324 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 10 rows were affected:\n",
       "row 55: primary diagnosis D382 => C450\n",
       "row 74: primary diagnosis I652 => I631\n",
       "row 110: primary diagnosis K5732 => K5720\n",
@@ -132,7 +132,7 @@
       "row 177: primary diagnosis I1190 => I1310\n",
       "row 200: primary diagnosis I489 => I5001\n",
       "row 205: primary diagnosis I1200 => E1173\n",
-      "2022-11-10 10:39:18.657 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:106 - Completed validation\n"
+      "2022-11-14 09:56:19.328 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:110 - Completed validation\n"
      ]
     },
     {
@@ -424,8 +424,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 10:39:22.653 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:90 - Read 26985 rows from the DB, for the hospital 'KSW' in 2017\n",
-      "2022-11-10 10:39:22.672 | WARNING  | src.revised_case_normalization.notebook_functions.revise:revise:47 - 2 rows could not be matched, given ['age_years', 'case_id_norm', 'duration_of_stay', 'gender']\n"
+      "2022-11-14 09:56:21.473 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:90 - Read 26985 rows from the DB, for the hospital 'KSW' in 2017\n",
+      "2022-11-14 09:56:21.495 | WARNING  | src.revised_case_normalization.notebook_functions.revise:revise:47 - 2 rows could not be matched, given ['age_years', 'case_id_norm', 'duration_of_stay', 'gender', 'patient_id']\n"
      ]
     },
     {
@@ -592,7 +592,7 @@
     "cols_to_join.remove(CASE_ID_COL)\n",
     "cols_to_join.append(NORM_CASE_ID_COL)\n",
     "# Ignore the patient ID in this dataset, because it is encrypted\n",
-    "cols_to_join.remove(PATIENT_ID_COL)\n",
+    "# cols_to_join.remove(PATIENT_ID_COL)\n",
     "\n",
     "revised_cases, unmatched = revise(file_info, revised_cases_df, validation_cols=cols_to_join)\n",
     "revised_cases.head()"
@@ -608,7 +608,126 @@
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>case_id</th>\n",
+       "      <th>patient_id</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age_years</th>\n",
+       "      <th>duration_of_stay</th>\n",
+       "      <th>case_id_norm</th>\n",
+       "      <th>old_pd</th>\n",
+       "      <th>primary_diagnosis</th>\n",
+       "      <th>bfs_code</th>\n",
+       "      <th>pccl</th>\n",
+       "      <th>drg</th>\n",
+       "      <th>added_icds</th>\n",
+       "      <th>removed_icds</th>\n",
+       "      <th>added_chops</th>\n",
+       "      <th>removed_chops</th>\n",
+       "      <th>aimedic_id</th>\n",
+       "      <th>case_id_db</th>\n",
+       "      <th>age_days</th>\n",
+       "      <th>admission_weight</th>\n",
+       "      <th>gestation_age</th>\n",
+       "      <th>admission_date</th>\n",
+       "      <th>grouper_admission_type</th>\n",
+       "      <th>discharge_date</th>\n",
+       "      <th>grouper_discharge_type</th>\n",
+       "      <th>ventilation_hours</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>21524636027</td>\n",
+       "      <td>AC6005CB8E5BC82C</td>\n",
+       "      <td>M</td>\n",
+       "      <td>86</td>\n",
+       "      <td>13</td>\n",
+       "      <td>21524636027</td>\n",
+       "      <td>D466</td>\n",
+       "      <td>D466</td>\n",
+       "      <td>M100</td>\n",
+       "      <td>3</td>\n",
+       "      <td>R61E</td>\n",
+       "      <td>[I5014, I5001]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td>22129106027</td>\n",
+       "      <td>CE19F1ACF3C71462</td>\n",
+       "      <td>M</td>\n",
+       "      <td>77</td>\n",
+       "      <td>14</td>\n",
+       "      <td>22129106027</td>\n",
+       "      <td>I5001</td>\n",
+       "      <td>I5001</td>\n",
+       "      <td>M100</td>\n",
+       "      <td>3</td>\n",
+       "      <td>F12F</td>\n",
+       "      <td>[I361, E871]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         case_id        patient_id gender  age_years  duration_of_stay case_id_norm old_pd primary_diagnosis bfs_code  pccl   drg      added_icds removed_icds added_chops removed_chops  aimedic_id case_id_db  age_days  admission_weight  gestation_age admission_date grouper_admission_type discharge_date grouper_discharge_type  ventilation_hours\n",
+       "83   21524636027  AC6005CB8E5BC82C      M         86                13  21524636027   D466              D466     M100     3  R61E  [I5014, I5001]           []          []            []         NaN        NaN       NaN               NaN            NaN            NaN                    NaN            NaN                    NaN                NaN\n",
+       "122  22129106027  CE19F1ACF3C71462      M         77                14  22129106027  I5001             I5001     M100     3  F12F    [I361, E871]           []          []            []         NaN        NaN       NaN               NaN            NaN            NaN                    NaN            NaN                    NaN                NaN"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "if unmatched.shape[0] > 0:\n",
     "    display(unmatched)"
@@ -624,8 +743,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 10:39:24.679 | INFO     | src.revised_case_normalization.notebook_functions.group:group:83 - Grouping 216 cases ...\n",
-      "2022-11-10 10:39:25.859 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:88 - Grouped 216 cases into: 216 revisions, 1966 diagnoses rows, 759 procedure rows\n"
+      "2022-11-14 09:56:22.159 | INFO     | src.revised_case_normalization.notebook_functions.group:group:83 - Grouping 216 cases ...\n",
+      "2022-11-14 09:56:23.251 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:88 - Grouped 216 cases into: 216 revisions, 1966 diagnoses rows, 759 procedure rows\n"
      ]
     }
    ],
@@ -820,12 +939,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 10:39:25.877 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:249 - Trying to insert 216 cases into the 'Revisions' table ...\n",
-      "2022-11-10 10:39:30.828 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:286 - Inserted 216 cases into the 'Revisions' table\n",
-      "2022-11-10 10:39:30.832 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:298 - Trying to insert 1966 rows into the 'Diagnoses' table ...\n",
-      "2022-11-10 10:39:34.598 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:336 - Inserted 1966 rows into the 'Diagnoses' table\n",
-      "2022-11-10 10:39:34.603 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:347 - Trying to insert 759 rows into the 'Procedures' table ...\n",
-      "2022-11-10 10:39:35.985 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:393 - Inserted 759 rows into the 'Procedures' table\n"
+      "2022-11-14 09:56:23.267 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:249 - Trying to insert 216 cases into the 'Revisions' table ...\n",
+      "2022-11-14 09:56:24.527 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:275 - Deleted 216 rows from the \"Revisions\" table, which is about to be updated\n",
+      "2022-11-14 09:56:24.858 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:286 - Inserted 216 cases into the 'Revisions' table\n",
+      "2022-11-14 09:56:24.865 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:298 - Trying to insert 1966 rows into the 'Diagnoses' table ...\n",
+      "2022-11-14 09:56:33.588 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:336 - Inserted 1966 rows into the 'Diagnoses' table\n",
+      "2022-11-14 09:56:33.596 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:347 - Trying to insert 759 rows into the 'Procedures' table ...\n",
+      "2022-11-14 09:56:35.536 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:393 - Inserted 759 rows into the 'Procedures' table\n"
      ]
     }
    ],
