--- a/src/revised_case_normalization/Hirslanden_St_Anna_2017_normalization.ipynb
+++ b/src/revised_case_normalization/Hirslanden_St_Anna_2017_normalization.ipynb
@@ -79,9 +79,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 15:58:25.361 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 72 cases for Hirslanden St. Anna 2017\n",
-      "2022-11-10 15:58:25.363 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:42 - Renamed a column named fall nummer to admno\n",
-      "2022-11-10 15:58:25.367 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:64 - TYPES:\n",
+      "2022-11-14 09:41:41.780 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 72 cases for Hirslanden St. Anna 2017\n",
+      "2022-11-14 09:41:41.785 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:63 - TYPES:\n",
       "tranche                   string\n",
       "datum                     string\n",
       "case_id                   object\n",
@@ -112,18 +111,18 @@
       "unnamed: 27               string\n",
       "case_id_norm              object\n",
       "dtype: object\n",
-      "2022-11-10 15:58:25.374 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
-      "2022-11-10 15:58:25.378 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
-      "2022-11-10 15:58:25.382 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
-      "2022-11-10 15:58:25.387 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
-      "2022-11-10 15:58:25.387 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
-      "2022-11-10 15:58:25.396 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 5 rows were affected:\n",
+      "2022-11-14 09:41:41.792 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
+      "2022-11-14 09:41:41.797 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
+      "2022-11-14 09:41:41.801 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
+      "2022-11-14 09:41:41.805 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
+      "2022-11-14 09:41:41.806 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
+      "2022-11-14 09:41:41.814 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 5 rows were affected:\n",
       "row 17: primary diagnosis T824 => N185\n",
       "row 28: primary diagnosis J189 => J841\n",
       "row 43: primary diagnosis I7023 => I7025\n",
       "row 56: primary diagnosis I200 => I7101\n",
       "row 63: primary diagnosis I1190 => I1100\n",
-      "2022-11-10 15:58:25.399 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:111 - Completed validation\n"
+      "2022-11-14 09:41:41.817 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:110 - Completed validation\n"
      ]
     },
     {
@@ -415,8 +414,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 15:58:26.625 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:90 - Read 12547 rows from the DB, for the hospital 'Hirslanden St. Anna' in 2017\n",
-      "2022-11-10 15:58:26.635 | WARNING  | src.revised_case_normalization.notebook_functions.revise:revise:47 - 1 rows could not be matched, given ['age_years', 'case_id_norm', 'duration_of_stay', 'gender']\n"
+      "2022-11-14 09:41:42.766 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:90 - Read 12547 rows from the DB, for the hospital 'Hirslanden St. Anna' in 2017\n",
+      "2022-11-14 09:41:42.778 | WARNING  | src.revised_case_normalization.notebook_functions.revise:revise:47 - 1 rows could not be matched, given ['age_years', 'case_id_norm', 'duration_of_stay', 'gender']\n"
      ]
     },
     {
@@ -728,7 +727,99 @@
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>case_id</th>\n",
+       "      <th>patient_id</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age_years</th>\n",
+       "      <th>duration_of_stay</th>\n",
+       "      <th>case_id_norm</th>\n",
+       "      <th>old_pd</th>\n",
+       "      <th>primary_diagnosis</th>\n",
+       "      <th>bfs_code</th>\n",
+       "      <th>pccl</th>\n",
+       "      <th>drg</th>\n",
+       "      <th>added_icds</th>\n",
+       "      <th>removed_icds</th>\n",
+       "      <th>added_chops</th>\n",
+       "      <th>removed_chops</th>\n",
+       "      <th>aimedic_id</th>\n",
+       "      <th>case_id_db</th>\n",
+       "      <th>patient_id_db</th>\n",
+       "      <th>age_days</th>\n",
+       "      <th>admission_weight</th>\n",
+       "      <th>gestation_age</th>\n",
+       "      <th>admission_date</th>\n",
+       "      <th>grouper_admission_type</th>\n",
+       "      <th>discharge_date</th>\n",
+       "      <th>grouper_discharge_type</th>\n",
+       "      <th>ventilation_hours</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>0009344274</td>\n",
+       "      <td>FBF3F2F3AC175A05</td>\n",
+       "      <td>W</td>\n",
+       "      <td>67</td>\n",
+       "      <td>9</td>\n",
+       "      <td>9344274</td>\n",
+       "      <td>I5014</td>\n",
+       "      <td>I5014</td>\n",
+       "      <td>M100</td>\n",
+       "      <td>3</td>\n",
+       "      <td>F24B</td>\n",
+       "      <td>[E1191, I340]</td>\n",
+       "      <td>[E1190]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       case_id        patient_id gender  age_years  duration_of_stay case_id_norm old_pd primary_diagnosis bfs_code  pccl   drg     added_icds removed_icds added_chops removed_chops  aimedic_id case_id_db patient_id_db  age_days  admission_weight  gestation_age admission_date grouper_admission_type discharge_date grouper_discharge_type  ventilation_hours\n",
+       "36  0009344274  FBF3F2F3AC175A05      W         67                 9      9344274  I5014             I5014     M100     3  F24B  [E1191, I340]      [E1190]          []            []         NaN        NaN           NaN       NaN               NaN            NaN            NaN                    NaN            NaN                    NaN                NaN"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "if unmatched.shape[0] > 0:\n",
     "    display(unmatched)"
@@ -744,8 +835,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 15:58:27.128 | INFO     | src.revised_case_normalization.notebook_functions.group:group:83 - Grouping 71 cases ...\n",
-      "2022-11-10 15:58:28.110 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:88 - Grouped 71 cases into: 71 revisions, 633 diagnoses rows, 290 procedure rows\n"
+      "2022-11-14 09:41:43.147 | INFO     | src.revised_case_normalization.notebook_functions.group:group:83 - Grouping 71 cases ...\n",
+      "2022-11-14 09:41:44.109 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:88 - Grouped 71 cases into: 71 revisions, 633 diagnoses rows, 290 procedure rows\n"
      ]
     }
    ],
@@ -928,7 +1019,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "04e44c03",
+   "id": "083f2f2a-b95c-4d2a-98d0-3e4b5e88df97",
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -940,19 +1031,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 15:58:28.128 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:249 - Trying to insert 71 cases into the 'Revisions' table ...\n",
-      "2022-11-10 15:58:29.782 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:275 - Deleted 71 rows from the \"Revisions\" table, which is about to be updated\n",
-      "2022-11-10 15:58:30.002 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:286 - Inserted 71 cases into the 'Revisions' table\n",
-      "2022-11-10 15:58:30.008 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:298 - Trying to insert 633 rows into the 'Diagnoses' table ...\n",
-      "2022-11-10 15:58:32.038 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:336 - Inserted 633 rows into the 'Diagnoses' table\n",
-      "2022-11-10 15:58:32.056 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:347 - Trying to insert 290 rows into the 'Procedures' table ...\n",
-      "2022-11-10 15:58:32.800 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:393 - Inserted 290 rows into the 'Procedures' table\n"
+      "2022-11-14 09:41:55.348 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:249 - Trying to insert 71 cases into the 'Revisions' table ...\n",
+      "2022-11-14 09:41:55.814 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:275 - Deleted 71 rows from the \"Revisions\" table, which is about to be updated\n",
+      "2022-11-14 09:41:55.884 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:286 - Inserted 71 cases into the 'Revisions' table\n",
+      "2022-11-14 09:41:55.887 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:298 - Trying to insert 633 rows into the 'Diagnoses' table ...\n",
+      "2022-11-14 09:41:57.351 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:336 - Inserted 633 rows into the 'Diagnoses' table\n",
+      "2022-11-14 09:41:57.352 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:347 - Trying to insert 290 rows into the 'Procedures' table ...\n",
+      "2022-11-14 09:41:58.077 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:393 - Inserted 290 rows into the 'Procedures' table\n"
      ]
     }
    ],
    "source": [
     "update_db(revisions_update, diagnoses_update, procedures_update)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7cfcb52-6e13-47ea-b5d0-96d303066bab",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
