--- a/src/revised_case_normalization/KSSG_2021_normalization.ipynb
+++ b/src/revised_case_normalization/KSSG_2021_normalization.ipynb
@@ -84,8 +84,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 11:38:51.638 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 25 cases for KSSG HQ 2021\n",
-      "2022-11-10 11:38:51.641 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:59 - TYPES:\n",
+      "2022-11-14 09:48:32.524 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 25 cases for KSSG HQ 2021\n",
+      "2022-11-14 09:48:32.528 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:63 - TYPES:\n",
       "tranche                   string\n",
       "datum lieferung           string\n",
       "case_id                   object\n",
@@ -118,15 +118,15 @@
       "schriftverkehr            string\n",
       "case_id_norm              object\n",
       "dtype: object\n",
-      "2022-11-10 11:38:51.647 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
-      "2022-11-10 11:38:51.650 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
-      "2022-11-10 11:38:51.652 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
-      "2022-11-10 11:38:51.655 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
-      "2022-11-10 11:38:51.656 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
-      "2022-11-10 11:38:51.660 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 2 rows were affected:\n",
+      "2022-11-14 09:48:32.533 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
+      "2022-11-14 09:48:32.536 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
+      "2022-11-14 09:48:32.538 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
+      "2022-11-14 09:48:32.540 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
+      "2022-11-14 09:48:32.541 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
+      "2022-11-14 09:48:32.545 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 2 rows were affected:\n",
       "row 0: primary diagnosis K831 => K8031\n",
       "row 22: primary diagnosis K420 => K429\n",
-      "2022-11-10 11:38:51.662 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:106 - Completed validation\n"
+      "2022-11-14 09:48:32.548 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:110 - Completed validation\n"
      ]
     },
     {
@@ -681,7 +681,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 11:38:56.705 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:90 - Read 28977 rows from the DB, for the hospital 'KSSG HQ' in 2021\n"
+      "2022-11-14 09:48:34.366 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:90 - Read 28977 rows from the DB, for the hospital 'KSSG HQ' in 2021\n"
      ]
     },
     {
@@ -880,8 +880,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 11:38:57.311 | INFO     | src.revised_case_normalization.notebook_functions.group:group:83 - Grouping 25 cases ...\n",
-      "2022-11-10 11:38:58.257 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:88 - Grouped 25 cases into: 25 revisions, 267 diagnoses rows, 104 procedure rows\n"
+      "2022-11-14 09:48:34.784 | INFO     | src.revised_case_normalization.notebook_functions.group:group:83 - Grouping 25 cases ...\n",
+      "2022-11-14 09:48:35.677 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:88 - Grouped 25 cases into: 25 revisions, 267 diagnoses rows, 104 procedure rows\n"
      ]
     }
    ],
@@ -1213,12 +1213,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 11:38:58.276 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:249 - Trying to insert 25 cases into the 'Revisions' table ...\n",
-      "2022-11-10 11:38:59.201 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:286 - Inserted 25 cases into the 'Revisions' table\n",
-      "2022-11-10 11:38:59.204 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:298 - Trying to insert 267 rows into the 'Diagnoses' table ...\n",
-      "2022-11-10 11:39:00.970 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:336 - Inserted 267 rows into the 'Diagnoses' table\n",
-      "2022-11-10 11:39:00.974 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:347 - Trying to insert 104 rows into the 'Procedures' table ...\n",
-      "2022-11-10 11:39:02.299 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:393 - Inserted 104 rows into the 'Procedures' table\n"
+      "2022-11-14 09:48:35.695 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:249 - Trying to insert 25 cases into the 'Revisions' table ...\n",
+      "2022-11-14 09:48:36.999 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:275 - Deleted 25 rows from the \"Revisions\" table, which is about to be updated\n",
+      "2022-11-14 09:48:37.085 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:286 - Inserted 25 cases into the 'Revisions' table\n",
+      "2022-11-14 09:48:37.087 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:298 - Trying to insert 267 rows into the 'Diagnoses' table ...\n",
+      "2022-11-14 09:48:38.345 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:336 - Inserted 267 rows into the 'Diagnoses' table\n",
+      "2022-11-14 09:48:38.349 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:347 - Trying to insert 104 rows into the 'Procedures' table ...\n",
+      "2022-11-14 09:48:39.101 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:393 - Inserted 104 rows into the 'Procedures' table\n"
      ]
     }
    ],
