--- a/src/revised_case_normalization/KSSG_Toggenburg_2019_normalization.ipynb
+++ b/src/revised_case_normalization/KSSG_Toggenburg_2019_normalization.ipynb
@@ -84,8 +84,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 11:45:53.674 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 28 cases for KSSG Toggenburg 2019\n",
-      "2022-11-10 11:45:53.678 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:59 - TYPES:\n",
+      "2022-11-14 09:51:45.982 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 28 cases for KSSG Toggenburg 2019\n",
+      "2022-11-14 09:51:45.986 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:63 - TYPES:\n",
       "tranche                          string\n",
       "datum                            string\n",
       "case_id                          object\n",
@@ -116,17 +116,17 @@
       "bmerkung                         string\n",
       "case_id_norm                     object\n",
       "dtype: object\n",
-      "2022-11-10 11:45:53.684 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
-      "2022-11-10 11:45:53.686 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
-      "2022-11-10 11:45:53.689 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
-      "2022-11-10 11:45:53.692 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
-      "2022-11-10 11:45:53.692 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
-      "2022-11-10 11:45:53.697 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 4 rows were affected:\n",
+      "2022-11-14 09:51:45.991 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
+      "2022-11-14 09:51:45.994 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
+      "2022-11-14 09:51:45.997 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
+      "2022-11-14 09:51:46.000 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
+      "2022-11-14 09:51:46.000 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
+      "2022-11-14 09:51:46.005 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 4 rows were affected:\n",
       "row 3: primary diagnosis K5732 => K5722\n",
       "row 15: primary diagnosis N390 => A4151\n",
       "row 21: primary diagnosis I1191 => D508\n",
       "row 22: primary diagnosis J209 => E272\n",
-      "2022-11-10 11:45:53.699 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:106 - Completed validation\n"
+      "2022-11-14 09:51:46.008 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:110 - Completed validation\n"
      ]
     },
     {
@@ -738,7 +738,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 11:46:00.387 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:90 - Read 8106 rows from the DB, for the hospital 'KSSG Toggenburg' in 2019\n"
+      "2022-11-14 09:51:59.156 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:90 - Read 8106 rows from the DB, for the hospital 'KSSG Toggenburg' in 2019\n"
      ]
     },
     {
@@ -937,8 +937,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 11:46:00.986 | INFO     | src.revised_case_normalization.notebook_functions.group:group:83 - Grouping 28 cases ...\n",
-      "2022-11-10 11:46:01.954 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:88 - Grouped 28 cases into: 28 revisions, 272 diagnoses rows, 56 procedure rows\n"
+      "2022-11-14 09:51:59.583 | INFO     | src.revised_case_normalization.notebook_functions.group:group:83 - Grouping 28 cases ...\n",
+      "2022-11-14 09:52:00.550 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:88 - Grouped 28 cases into: 28 revisions, 272 diagnoses rows, 56 procedure rows\n"
      ]
     }
    ],
@@ -1300,12 +1300,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 11:46:01.971 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:249 - Trying to insert 28 cases into the 'Revisions' table ...\n",
-      "2022-11-10 11:46:03.644 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:286 - Inserted 28 cases into the 'Revisions' table\n",
-      "2022-11-10 11:46:03.648 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:298 - Trying to insert 272 rows into the 'Diagnoses' table ...\n",
-      "2022-11-10 11:46:05.353 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:336 - Inserted 272 rows into the 'Diagnoses' table\n",
-      "2022-11-10 11:46:05.358 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:347 - Trying to insert 56 rows into the 'Procedures' table ...\n",
-      "2022-11-10 11:46:06.077 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:393 - Inserted 56 rows into the 'Procedures' table\n"
+      "2022-11-14 09:52:00.568 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:249 - Trying to insert 28 cases into the 'Revisions' table ...\n",
+      "2022-11-14 09:52:02.520 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:275 - Deleted 28 rows from the \"Revisions\" table, which is about to be updated\n",
+      "2022-11-14 09:52:02.577 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:286 - Inserted 28 cases into the 'Revisions' table\n",
+      "2022-11-14 09:52:02.579 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:298 - Trying to insert 272 rows into the 'Diagnoses' table ...\n",
+      "2022-11-14 09:52:04.542 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:336 - Inserted 272 rows into the 'Diagnoses' table\n",
+      "2022-11-14 09:52:04.545 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:347 - Trying to insert 56 rows into the 'Procedures' table ...\n",
+      "2022-11-14 09:52:05.570 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:393 - Inserted 56 rows into the 'Procedures' table\n"
      ]
     }
    ],
