--- a/src/revised_case_normalization/Winterthur_2020_normalization.ipynb
+++ b/src/revised_case_normalization/Winterthur_2020_normalization.ipynb
@@ -82,8 +82,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-11 10:19:33.635 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 214 cases for KSW 2020\n",
-      "2022-11-11 10:19:33.641 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:63 - TYPES:\n",
+      "2022-11-14 08:50:25.733 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 214 cases for KSW 2020\n",
+      "2022-11-14 08:50:25.744 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:63 - TYPES:\n",
       "tranche                   string\n",
       "datum                     string\n",
       "fid                       string\n",
@@ -113,15 +113,15 @@
       "unnamed: 26               string\n",
       "case_id_norm              object\n",
       "dtype: object\n",
-      "2022-11-11 10:19:33.642 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:72 - 41/214 rows were deleted because contained NaNs\n",
-      "2022-11-11 10:19:33.689 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
-      "2022-11-11 10:19:33.697 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
-      "2022-11-11 10:19:33.705 | INFO     | src.utils.dataframe_utils:validate_chop_codes:109 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': The following 2 rows were affected:\n",
+      "2022-11-14 08:50:25.744 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:72 - 41/214 rows were deleted because contained NaNs\n",
+      "2022-11-14 08:50:25.787 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
+      "2022-11-14 08:50:25.795 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
+      "2022-11-14 08:50:25.803 | INFO     | src.utils.dataframe_utils:validate_chop_codes:109 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': The following 2 rows were affected:\n",
       "row 92: discarded CHOPs after validation {'381618.393188'}\n",
       "row 146: discarded CHOPs after validation {'519913.519914'}\n",
-      "2022-11-11 10:19:33.714 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
-      "2022-11-11 10:19:33.714 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
-      "2022-11-11 10:19:33.732 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 32 rows were affected:\n",
+      "2022-11-14 08:50:25.811 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
+      "2022-11-14 08:50:25.811 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
+      "2022-11-14 08:50:25.826 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 32 rows were affected:\n",
       "row 16: primary diagnosis K720 => K703\n",
       "row 18: primary diagnosis A4158 => K8030\n",
       "row 19: primary diagnosis I745 => I7022\n",
@@ -154,7 +154,7 @@
       "row 200: primary diagnosis I1190 => I1100\n",
       "row 211: primary diagnosis R502 => N390\n",
       "row 213: primary diagnosis R060 => I5012\n",
-      "2022-11-11 10:19:33.734 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:110 - Completed validation\n"
+      "2022-11-14 08:50:25.830 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:110 - Completed validation\n"
      ]
     },
     {
@@ -446,8 +446,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-11 10:19:36.671 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:90 - Read 13056 rows from the DB, for the hospital 'KSW' in 2020\n",
-      "2022-11-11 10:19:36.684 | WARNING  | src.revised_case_normalization.notebook_functions.revise:revise:47 - 3 rows could not be matched, given ['age_years', 'case_id_norm', 'duration_of_stay', 'gender']\n"
+      "2022-11-14 08:50:27.467 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:90 - Read 13056 rows from the DB, for the hospital 'KSW' in 2020\n",
+      "2022-11-14 08:50:27.483 | WARNING  | src.revised_case_normalization.notebook_functions.revise:revise:47 - 3 rows could not be matched, given ['age_years', 'case_id_norm', 'duration_of_stay', 'gender']\n"
      ]
     },
     {
@@ -798,8 +798,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-11 10:19:37.590 | INFO     | src.revised_case_normalization.notebook_functions.group:group:83 - Grouping 170 cases ...\n",
-      "2022-11-11 10:19:38.852 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:88 - Grouped 170 cases into: 170 revisions, 1760 diagnoses rows, 655 procedure rows\n"
+      "2022-11-14 08:50:28.164 | INFO     | src.revised_case_normalization.notebook_functions.group:group:83 - Grouping 170 cases ...\n",
+      "2022-11-14 08:50:29.939 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:88 - Grouped 170 cases into: 170 revisions, 1760 diagnoses rows, 655 procedure rows\n"
      ]
     }
    ],
@@ -994,12 +994,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-11 10:19:38.871 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:249 - Trying to insert 170 cases into the 'Revisions' table ...\n",
-      "2022-11-11 10:19:40.011 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:286 - Inserted 170 cases into the 'Revisions' table\n",
-      "2022-11-11 10:19:40.014 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:298 - Trying to insert 1760 rows into the 'Diagnoses' table ...\n",
-      "2022-11-11 10:19:43.129 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:336 - Inserted 1760 rows into the 'Diagnoses' table\n",
-      "2022-11-11 10:19:43.133 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:347 - Trying to insert 655 rows into the 'Procedures' table ...\n",
-      "2022-11-11 10:19:44.231 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:393 - Inserted 655 rows into the 'Procedures' table\n"
+      "2022-11-14 08:50:29.956 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:249 - Trying to insert 170 cases into the 'Revisions' table ...\n",
+      "2022-11-14 08:50:30.699 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:275 - Deleted 170 rows from the \"Revisions\" table, which is about to be updated\n",
+      "2022-11-14 08:50:30.865 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:286 - Inserted 170 cases into the 'Revisions' table\n",
+      "2022-11-14 08:50:30.870 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:298 - Trying to insert 1760 rows into the 'Diagnoses' table ...\n",
+      "2022-11-14 08:50:34.203 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:336 - Inserted 1760 rows into the 'Diagnoses' table\n",
+      "2022-11-14 08:50:34.206 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:347 - Trying to insert 655 rows into the 'Procedures' table ...\n",
+      "2022-11-14 08:50:35.143 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:393 - Inserted 655 rows into the 'Procedures' table\n"
      ]
     }
    ],
